2008-10-10  Thomas Heller  <theller@python.net>

	* Python 2.6 compatibility: use 'types.MethodType' instead of
	'new.instancemethod' to fix a -3 warning.

	Use 'raise Exception(details)' instead of
	'raise Exception, details'.

	Don't use tuple unpacking in exception handlers:
	  'except COMError, err:
	      (hresult, text, details) = err'
	instead of
	  'except COMError, (hresult, text, details)'

	* Python 2.4 compatibility: os.stat() raises OSError instead of
	WindowsError when a file is not found.

2008-09-19  Thomas Heller  <theller@python.net>

	* Bump version number to 0.5.3dev.

	* Bump version number to 0.5.2.
	Released comtypes-0.5.2.

	* COMError nows prints the contained hresult in hex.

2008-09-18  Thomas Heller  <theller@python.net>

	* Changed the version-checking code that the code generator
	creates.  Reintroduced (sorry, Anthony!) the comparison of
	timestamps, if both the typelib and the generated module are
	files.

2008-09-10  Thomas Heller  <theller@python.net>

	* In comtypes\_comobject.py, Invoke: Named arguments passed to
	COMObject.IDispatch_Invoke are now (hopefully!) unpacked
	correctly.  This should fix the order of parameters passed to MS
	office (Word, Excel) and other (autocad?) event handlers.

2008-09-04  Thomas Heller  <theller@python.net>

	* Removed the code that compared the timestamps of Python wrapper
	modules and type library files - this approach was totally broken.

	Generated modules are out of date if they were created by the code
	generator module with a different version number; the version
	number is now checked when a module is imported.

	The current mechanism also works correctly for generated modules
	in frozen scripts.

	Thanks to Anthony Tuininga.

2008-08-27  Thomas Heller  <theller@python.net>

	* Avoid double-free of BSTR strings under certain conditions.

	* A NULL handler is now added to the comtypes logger; this
	prevents messages like 'No handlers could be found for logger